Add iosxr to hosts

--- a/hosts.ini
+++ b/hosts.ini
@@ -1,2 +1,5 @@
 [iosxe]
-devnetsandboxiosxec9k.cisco.com ansible_user=shonendumm ansible_password="{{ cisco_password }}" ansible_network_os=ios ansible_connection=ansible.netcommon.network_cli ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+devnetsandboxiosxec9k.cisco.com ansible_user=shonendumm ansible_password="{{ pw }}" ansible_network_os=ios ansible_connection=ansible.netcommon.network_cli ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+
+[iosxr]
+sandbox-iosxr-1.cisco.com ansible_user=admin ansible_password="{{ pw }}" ansible_network_os=iosxr ansible_connection=ansible.netcommon.network_cli ansible_ssh_common_args='-o StrictHostKeyChecking=no'
